--- a/index.html
+++ b/index.html
@@ -615,20 +615,34 @@
     <footer>
         <div class="rodape">
             <div class="texto_rodape">
-               <div class="rodape1">
-                    <ul class="menu_rodape">
-                        <li>Por que Delivery?</li>
-                        <li>BLÁ-BLÁ</li>
-                        <li>BLÁ-BLÁ</li>
-                        <li>BLÁ-BLÁ</li>
-                    </ul>
-               </div>
 
-               <div class="rodape2">
-                <span>
-                  
-                </span>
-               </div>
+                <ul class="menu_rodape">
+                    <li>Por que Delivery?</li>
+                    <li>Nosso Time</li>
+                    <li>Contato</li>
+                    <li>FAQ</li>
+                </ul>
+            </div>
+            <div class="texto_segundo">
+                <div class="text-center">
+                 <small>   &#169; 2023 Copyright - DeliverySafe</small>
+                    <!--&copy -->
+                </div>
+                <div class="texto_segundo">
+                  <small>E-mail : sac@deliverysafe.br - Contato:(11)921123221</small>
+                </div>
+            </div>
+            <div class="rodape2">
+                
+                <ul class="icone mt-3">
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-twitch"></i></li>
+                    <li><i class="fa-brands fa-tiktok"></i></li>
+                    <li><i class="fa-brands fa-whatsapp"></i></li>
+
+                </ul>
             </div>
         </div>
     </footer>
